--- a/notebooks/jupyter/New_Raster_Mask.ipynb
+++ b/notebooks/jupyter/New_Raster_Mask.ipynb
@@ -190,35 +190,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# file = 'GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0_Clip.tif'\n",
-    "# raster = rasterio.open(raster_raw+file)\n",
-    "# crs = raster.crs"
+    "file = 'AFR_PPP_2015_adj_v2.tif'\n",
+    "raster = rasterio.open(raster_raw+file)\n",
+    "crs = raster.crs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'count': 1,\n",
-       " 'crs': CRS({'proj': 'moll', 'lon_0': 0, 'x_0': 0, 'y_0': 0, 'ellps': 'WGS84', 'units': 'm', 'no_defs': True}),\n",
+       " 'crs': CRS({'init': 'epsg:4326'}),\n",
        " 'driver': 'GTiff',\n",
        " 'dtype': 'float32',\n",
-       " 'height': 8717,\n",
-       " 'nodata': None,\n",
-       " 'transform': Affine(1000.0, 0.0, -2482594.5474435315,\n",
-       "       0.0, -1000.0, 4502029.461868489),\n",
-       " 'width': 8624}"
+       " 'height': 11161,\n",
+       " 'nodata': -3.4028234663852886e+38,\n",
+       " 'transform': Affine(0.00833333329999305, 0.0, -33.3254172868223,\n",
+       "       0.0, -0.00833333329999305, 41.791250202105076),\n",
+       " 'width': 12575}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,43 +229,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask300m, geom300, poly_gdf300 = raster_mask_poly(raster, 1, 300, crs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                            geometry\n",
+      "0  POLYGON ((-33.325417 41.79125, -33.325417 -51....\n",
+      "1  POLYGON ((19.341249 -34.608749, 19.357916 -34....\n",
+      "2  POLYGON ((9.857915999999999 37.34125, 9.857915...\n",
+      "3  POLYGON ((19.224583 -34.417083, 19.224583 -34....\n",
+      "4  POLYGON ((19.391249 -34.600416, 19.391249 -34....\n",
+      "5  POLYGON ((19.157916 -34.417083, 19.157916 -34....\n",
+      "60626\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(poly_gdf300.head(6))\n",
+    "print(len(poly_gdf300))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask1500m, geom1500, poly_gdf1500 = raster_mask_poly(raster, 1, 1500, crs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(poly_gdf1500.head(6))\n",
-    "print(len(poly_gdf1500))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                            geometry\n",
+      "1  POLYGON ((19.341249 -34.608749, 19.357916 -34....\n",
+      "2  POLYGON ((9.857915999999999 37.34125, 9.857915...\n",
+      "3  POLYGON ((19.224583 -34.417083, 19.224583 -34....\n",
+      "4  POLYGON ((19.391249 -34.600416, 19.391249 -34....\n",
+      "5  POLYGON ((19.157916 -34.417083, 19.157916 -34....\n",
+      "6  POLYGON ((19.341249 -34.592083, 19.341249 -34....\n",
+      "60625\n"
+     ]
+    }
+   ],
    "source": [
     "# drop first row, which is bounding box of Africa and the write \n",
-    "poly_gdf1500 = poly_gdf1500.drop(poly_gdf1500.index[0], axis = 0)\n",
-    "print(poly_gdf1500.head(6))\n",
-    "print(len(poly_gdf1500))"
+    "poly_gdf300 = poly_gdf300.drop(poly_gdf300.index[0], axis = 0)\n",
+    "print(poly_gdf300.head(6))\n",
+    "print(len(poly_gdf300))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write out polygons \n",
-    "# poly_gdf1500.to_file(temp_data+'GHS_POP_GPW42000_GLOBE_R2015A_54009_1k_v1_0_Clip_1500.shp', driver='ESRI Shapefile')"
+    "#write out polygons \n",
+    "# poly_gdf300.to_file(temp_data+'AFR_PPP_2015_adj_v2_300.shp', driver='ESRI Shapefile')"
    ]
   },
   {
@@ -277,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,17 +322,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = rasterio.open('data/GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0_Clip.tif')\n",
+    "file = rasterio.open('data/GHS_POP_GPW42000_GLOBE_R2015A_54009_1k_v1_0_Clip.tif')\n",
     "crs = file.crs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,24 +360,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                            geometry\n",
-      "0  POLYGON ((-2482594.547444 4502029.461868, -248...\n",
-      "1  POLYGON ((1776405.452556 -4197970.538132, 1778...\n",
-      "2  POLYGON ((856405.452556 4490029.461868, 856405...\n",
-      "3  POLYGON ((1767405.452556 -4161970.538132, 1767...\n",
-      "4  POLYGON ((1717405.452556 -4175970.538132, 1717...\n",
-      "5  POLYGON ((1729405.452556 -4158970.538132, 1730...\n",
-      "46075\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print((poly_gdf_1500c300.head(6)))\n",
     "print(len(poly_gdf_1500c300))"
@@ -355,24 +370,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                            geometry\n",
-      "1  POLYGON ((1776405.452556 -4197970.538132, 1778...\n",
-      "2  POLYGON ((856405.452556 4490029.461868, 856405...\n",
-      "3  POLYGON ((1767405.452556 -4161970.538132, 1767...\n",
-      "4  POLYGON ((1717405.452556 -4175970.538132, 1717...\n",
-      "5  POLYGON ((1729405.452556 -4158970.538132, 1730...\n",
-      "6  POLYGON ((1703405.452556 -4154970.538132, 1708...\n",
-      "46074\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# drop first row, which is bounding box of Africa\n",
     "poly_gdf_1500c300_drop = poly_gdf_1500c300.drop(poly_gdf_1500c300.index[0], axis = 0)\n",
@@ -382,11 +382,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poly_gdf_1500c300_drop.to_file('GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0_Clip_1500c300.shp', driver='ESRI Shapefile')"
+    "# poly_gdf_1500c300_drop.to_file('data/GHS_POP_GPW42000_GLOBE_R2015A_54009_1k_v1_0_Clip.tif_1500c300.shp', driver='ESRI Shapefile')"
    ]
   }
  ],
