--- a/notebooks/jupyter/Raster_clip.ipynb
+++ b/notebooks/jupyter/Raster_clip.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "temp_data = '../../temp_data/'\n",
     "raster_out = '../../data/interim/'\n",
-    "raster_in = '../../data/raw/'"
+    "raster_in = '../../data/'"
    ]
   },
   {
@@ -62,35 +62,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raster = raster_in+'LandScan-Global-2015/lspop2015/w001001.adf'\n",
-    "shape = temp_data+'20190114_Africabase.shp'\n",
-    "file = raster_out+'LS15_w001001_Clip.tif'"
+    "raster = raster_in+'GHS_POP_GPW42000_GLOBE_R2015A_54009_1k_v1_0.tif'\n",
+    "shape = temp_data+'20190114_Africabase_EPSG54009.shp'\n",
+    "file = raster_in+'GHS_POP_GPW42000_GLOBE_R2015A_54009_1k_v1_0_Clip.tif'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'driver': 'AIG',\n",
-       " 'dtype': 'int32',\n",
-       " 'nodata': -2147483647.0,\n",
-       " 'width': 43200,\n",
-       " 'height': 21600,\n",
-       " 'count': 1,\n",
-       " 'crs': CRS({'init': 'epsg:4326'}),\n",
-       " 'transform': Affine(0.0083333333333333, 0.0, -180.0,\n",
-       "        0.0, -0.0083333333333333, 89.99999999999929)}"
+       "{'count': 1,\n",
+       " 'crs': CRS({'proj': 'moll', 'lon_0': 0, 'x_0': 0, 'y_0': 0, 'ellps': 'WGS84', 'units': 'm', 'no_defs': True}),\n",
+       " 'driver': 'GTiff',\n",
+       " 'dtype': 'float32',\n",
+       " 'height': 15236,\n",
+       " 'nodata': None,\n",
+       " 'transform': Affine(1000.0, 0.0, -17619594.54744353,\n",
+       "       0.0, -1000.0, 8751029.46186849),\n",
+       " 'width': 35497}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
